<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="response"
            type="com.example.myapplication.ui.auth.responses.AuthResponse" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.wallet.LoginActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/gradient_rectangle_background"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/eos_token_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dimen_view_margin_top"
                    android:drawableEnd="@drawable/ic_eos"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@={response.eosToken}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/dimen_eos_token_textsize" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/usd_value_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@={response.usdValue}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textColor="@color/colorWhiteOverlay"
                    android:textSize="@dimen/dimen_large_textsize" />


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:id="@+id/main_rl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:gravity="bottom">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dimen_textview_marginstart"
                            android:layout_marginBottom="@dimen/dimen_textview_marginbottom"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:text="@string/str_with_coinbase"
                            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                            android:textColor="@color/colorBlue"
                            android:textSize="15sp" />

                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/main_rl"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ellipsize="end"
                            android:gravity="center"
                            android:maxLines="1"

                            style="@style/ButtonStyle"
                            android:text="@string/str_buy"
                            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                            android:textColor="@color/colorBrown"
                            android:textSize="@dimen/dimen_header_textview_textsize" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ellipsize="end"
                            android:gravity="center"
                            android:maxLines="1"
                            android:layout_marginStart="8dp"
                            style="@style/ButtonStyle"
                            android:text="@string/str_send"
                            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                            android:textColor="@color/colorBrown"
                            android:textSize="@dimen/dimen_header_textview_textsize" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ellipsize="end"
                            android:gravity="center"
                            android:maxLines="1"
                            android:layout_marginStart="8dp"
                            android:text="@string/str_recieve"
                            style="@style/ButtonStyle"
                            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                            android:textColor="@color/colorBrown"
                            android:textSize="@dimen/dimen_header_textview_textsize" />


                    </LinearLayout>


                </RelativeLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">


                <include
                    android:id="@+id/res_inc"
                    layout="@layout/resource_view"
                    bind:response="@={response}"/>


            </LinearLayout>


        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:visibility="invisible" />


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>


